# statuspage-backend

./: Makefile  README.md  pyproject.toml
apps/status/: models.py  serializers.py  urls.py  views.py
apps/status/migrations/: 0001_initial.py  0002_page_description.py  0003_systemmetric_unit.py  0004_alter_systemmetric_unit.py  0005_alter_page_url.py
apps/userauth/: serializers.py  views.py
statuspage/: settings.py  urls.py
